--- a/css/memory-game.css
+++ b/css/memory-game.css
@@ -26,3 +26,11 @@ main {
 .selected {
     background-color: lightblue;
 }
+
+.selected {
+    background-color: lightblue;
+}
+
+.card.paired {
+    background-color: orange;
+}
